--- a/www/custom.css
+++ b/www/custom.css
@@ -33,3 +33,19 @@
     width: 1000px;
 }
 
+#navBox h3{
+ font-size: 1.5em;
+}
+
+#ytdBox h3{
+ font-size: 1.5em;
+}
+
+#mtdBox h3{
+font-size: 1.5em;
+}
+
+#dBox h3{
+font-size: 1.5em;
+}
+
